[tool.poetry]
name = "compressors"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.9"
numpy = ">=1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
